# advent-of-code-template

./: README.md  pyproject.toml
advent_of_code/: __main__.py  utils.py
advent_of_code/puzzles2024/: day02.py  day03.py  day04.py  day06.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day5.py  day7.py  day8.py
